[package]
name = "turbostore"
version = "0.1.1"
edition = "2024"
readme = "README.md"
description = "A concurrent, in-memory, in-process, redis-like storage for Rust."
license-file = "LICENSE"
repository = "https://github.com/Nekidev/turbostore"
authors = ["Rafael Bradley"]
keywords = [
    "redis",
    "in-memory",
    "storage",
    "concurrent",
    "async",
]

[dependencies]
bitcode = "0.6.6"
chrono = "0.4.41"
scc = "2.3.4"

[dev-dependencies]
pollster = { version = "0.4.0", features = ["macro"] }
